# sunspec_rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  foobar.xml  justfile
.github/workflows/: build-n-test.yml
changelog.d/: 20230921_000416_pete.grace.md  20230921_001356_pete.grace.md  20230921_132215_pete.grace.md  20230921_161201_pete.grace.md  20231003_110503_pete.grace.md  20231003_110748_pete.grace.md  20231003_184708_pete.grace_repeating_blocks.md  20231010_114212_pete.grace.md
models/: manifest.xml  model_1.json  model_10.json  model_10000.json  model_10020.json  model_10040.json  model_101.json  model_102.json  model_103.json  model_11.json  model_111.json  model_112.json  model_113.json  model_12.json  model_120.json  model_121.json  model_122.json  model_123.json  model_124.json  model_125.json  model_126.json  model_127.json  model_128.json  model_129.json  model_13.json  model_130.json  model_131.json  model_132.json  model_133.json  model_134.json  model_135.json  model_136.json  model_137.json  model_138.json  model_139.json  model_14.json  model_140.json  model_141.json  model_142.json  model_143.json  (+117 more)
models/generac/: smdx_64200.xml  smdx_64202.xml  smdx_64203.xml  smdx_64205.xml  smdx_64206.xml  smdx_64229.xml  smdx_64230.xml  smdx_64235.xml  smdx_64253.xml  smdx_64254.xml  smdx_64255.xml  smdx_64259.xml  smdx_64260.xml  smdx_64261.xml  smdx_64262.xml  smdx_64263.xml  smdx_64265.xml  smdx_64268.xml
src/lib/: lib.rs  metrics.rs  modbus.rs  modbus_test_harness.rs  model_data.rs  sunspec.rs  sunspec_connection.rs  sunspec_data.rs  sunspec_models.rs
src/lib/json/: group.rs  misc.rs  mod.rs  point.rs
tests/: test_reads.rs  test_writes.rs
tests/common/: mod.rs
