[package]
name = "sunspec_rs"
version = "0.6.1"
edition = "2021"
authors = ["Peter Grace"]
license = "MIT"
description = "library for interacting with sunspec-compliant devices over modbus"
repository = "https://github.com/PeterGrace/sunspec_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sunspec_rs"
path = "src/lib/lib.rs"

[[bin]]
name = "sunspec_test"
path = "src/bin/main.rs"

[[bin]]
name = "get_models"
path = "src/bin/tools/get_models/main.rs"

[[bin]]
name = "scan_slaves"
path = "src/bin/tools/scan_slaves/main.rs"

[dependencies]
clap-verbosity-flag = "2.0.1"
tokio = { version = "1.27.0", features = ["tracing", "macros", "rt-multi-thread"] }
tokio-modbus = {version = "0.9.0", default-features=false, features = ["tcp"]}
tokio-retry = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-log = "0.1.3"
serde-xml-rs = "0.6.0"
serde = { version = "1.0.185", features=["derive"]}
clap = { version = "4.3.24", features = ["derive","env"] }
anyhow = "1.0.75"
lazy_static = "1.4.0"
bitvec ="1.0.1"
async-recursion = "1.0.4"
thiserror = "1.0.48"
async-trait = "0.1.73"
prometheus = "0.13.3"
num-traits = "0.2.16"
