[package]
name = "sunspec_rs"
version = "0.8.0"
edition = "2021"
authors = ["Peter Grace"]
license = "MIT"
description = "library for interacting with sunspec-compliant devices over modbus"
repository = "https://github.com/PeterGrace/sunspec_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sunspec_rs"
path = "src/lib/lib.rs"

[[bin]]
name = "sunspec_test"
path = "src/bin/main.rs"

[[bin]]
name = "get_models"
path = "src/bin/tools/get_models/main.rs"

[[bin]]
name = "scan_slaves"
path = "src/bin/tools/scan_slaves/main.rs"

[[bin]]
name = "calc_groups"
path = "src/bin/tools/calc_groups/main.rs"

[[bin]]
name = "test_tls"
path = "src/bin/tools/test_tls/main.rs"


[dependencies]
clap-verbosity-flag = "2.0.1"
tokio = { version = "1.27.0", features = ["tracing", "macros", "rt-multi-thread"] }
tokio-modbus = {version = "0.9.0", default-features=false, features = ["tcp"]}
tokio-retry = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt","env-filter"] }
tracing-log = "0.1.3"
serde-xml-rs = "0.6.0"
serde = { version = "1.0.185", features=["derive"]}
serde_json = { version = "1.0.117", features = ["preserve_order"] }
clap = { version = "4.3.24", features = ["derive","env"] }
anyhow = "1.0.75"
lazy_static = "1.4.0"
bitvec ="1.0.1"
async-recursion = "1.0.4"
thiserror = "1.0.48"
async-trait = "0.1.73"
prometheus = "0.13.3"
num-traits = "0.2.16"
tokio-rustls = "0.26.2"
rustls-pemfile = "2.2.0"
pem = "3.0.5"
pkcs8 = { version = "0.10.2", features = ["pkcs5", "encryption"] }
pkcs5 = "0.7.1"
aes = "0.8.4"
bon = "3.6.4"